17th January 2014

- changed the mechanism for EP's. Introduced a methog to simplify EP's configuration
- github issue #104 ; the report directories are collapsable/expandable
- updated user Guide

28th October

- rework for ClearCase plugin to work on 64 bit systems
- GUI code changes for to handle Invalid return code
- GUI code changes to implement retry when user files
  cannot be openned

18th October

- start client and sniffer fix
- Deleted TscTestBedLib, which is deprecated.
- added "invalid" status for tc in GUI
- Cleanup code in GUI
- added comments to ClearCase related code in GUI 

11th October

- testing results can be saved in database even if an optional suite parameter
  is empty
- a test case can retrieve an empty suite parameter; no crash occurs
- changing user group for a server operation mode ( development or production )
  do not affect the groups for other operation mode
- export/import operations for test beds support empty strings

04th October

- added more support for ClearCase ( mkview, mkelem, rmelem, mklabel, mkattr, describe )
- ClearCase erros displayed in GUI
- Fixed empty values when exporting / importing resources as XML.
- Fixed the installers to backup the config folders correctly

27th September 

- added ClearCase built-in plugin
- a new variable twister_tc_revision can be saved into DB
- fix for issue #94; nested configurations can be retrieved in test cases
- Implemented more variables inside e-mail subject and body, after the tests are run
    twister_user
    twister_ce_hostname
    twister_ce_ip
    twister_ce_os
    twister_ce_python_revision
    twister_ce_type
    twister_ep_hostname
    twister_ep_ip
    twister_ep_os
    twister_ep_python_revision
    twister_pf_fname
    twister_rf_fname
    twister_server_location
- updated userGuide
- updated Plugins document

20th September

- fixed a bug with user groups, when creating new users.
- CE logs are displayed in the GUI; issue #14