@@ -2,7 +2,8 @@
 
 - changed the mechanism for EP's. Introduced a methog to simplify EP's configuration
 - github issue #104 ; the report directories are collapsable/expandable
-- updated user Guide
+- the trace level of Twister server can be set on the fly; there are 6 debug levels that can be set
+- updated User Guide
 
 28th October
 
